created getItem handler
