# main.go
@@ -16,36 +16,37 @@ import (
 // @host localhost:8080
 // @BasePath /
 
-// Item представляет объект данных
+// Item data object
 type Item struct {
-	ID    string  `json:"id"`    // Уникальный идентификатор
-	Name  string  `json:"name"`  // Название
-	Price float64 `json:"price"` // Цена
+	ID    string  `json:"id"`    // Unique ID
+	Name  string  `json:"name"`  // Object's name
+	Price float64 `json:"price"` // Price
 }
 
 var (
 	items = make(map[string]Item)
-	mu    sync.Mutex
+	mutex sync.Mutex
 )
 
-// getItems возвращает список всех объектов.
-// @Summary Возвращает список объектов
+// getItems Get list of Items.
+// @Summary Return list of all Items.
 // @Tags Items
 // @Produce json
 // @Success 200 {object} map[string]Item
 // @Router /items [get]
 func getItems(w http.ResponseWriter, r *http.Request) {
-	mu.Lock()
-	defer mu.Unlock()
+	mutex.Lock()
+	defer mutex.Unlock()
+	w.Header().Set("Content-Type", "application/json")
 	json.NewEncoder(w).Encode(items)
 }
 
-// createItem создает новый объект.
-// @Summary Создает новый объект
+// createItem Create a new Item.
+// @Summary Create a new Item object.
 // @Tags Items
 // @Accept json
 // @Produce json
-// @Param item body Item true "Новый объект"
+// @Param item body Item true "New Item"
 // @Success 201 {object} Item
 // @Router /items [post]
 func createItem(w http.ResponseWriter, r *http.Request) {
@@ -54,10 +55,40 @@ func createItem(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
-	mu.Lock()
+	mutex.Lock()
 	items[item.ID] = item
-	mu.Unlock()
+	mutex.Unlock()
 	w.WriteHeader(http.StatusCreated)
+	json.NewEncoder(w).Encode(item)
+}
+
+// getItem get Item by ID.
+// @Summary get Item by ID.
+// @Tags Items
+// @Accept json
+// @Produce json
+// @Param id path string true "Object's ID"
+// @Success 200 {object} Item
+// @Failure 404 {string} string "Item not found"
+// @Failure 400 {string} string "Bad request"
+// @Router /items/{id} [get]
+func getItem(w http.ResponseWriter, r *http.Request) {
+	id := r.URL.Path[len("/items/"):]
+	if id == "" {
+		http.Error(w, "ID didn't provided", http.StatusBadRequest)
+		return
+	}
+
+	mutex.Lock()
+	defer mutex.Unlock()
+
+	item, exists := items[id]
+	if !exists {
+		http.Error(w, "Item not found", http.StatusNotFound)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
 	json.NewEncoder(w).Encode(item)
 }
 
@@ -68,6 +99,14 @@ func main() {
 			getItems(w, r)
 		} else if r.Method == http.MethodPost {
 			createItem(w, r)
+		}
+	})
+
+	http.HandleFunc("/items/", func(w http.ResponseWriter, r *http.Request) {
+		if r.Method == http.MethodGet {
+			getItem(w, r)
+		} else {
+			http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
 		}
 	})
 
